# ahorn

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  README.md  astro.config.mjs  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  types.d.ts
.github/: CONTRIBUTING.md  renovate.json
.github/ISSUE_TEMPLATE/: dataset-request.yml
.github/workflows/: deploy.yml  lint.yml
public/datasets/: .gitignore
scripts/: DAWN.py  MAG-10.py  MANTRA.py  NDC-classes.py  NDC-substances.py  algebra-questions.py  amazon-reviews.py  benson.py  cat-edge-Cooking.py  cat-edge-DAWN.py  cat-edge-MAG-10.py  cat-edge-algebra-questions.py  cat-edge-geometry-questions.py  cat-edge-madison-restaurant-reviews.py  cat-edge-music-blues-reviews.py  cat-edge-vegas-bars-reviews.py  citeseer-cocitation.py  coauth-DBLP.py  coauth-MAG-Geology.py  coauth-MAG-History.py  congress-bills.py  contact-high-school.py  contact-primary-school.py  cooking.py  cora-coauthorship.py  cora-cocitation.py  dblp-coauthorship.py  drug-target-interaction.py  email-enron.py  email-eu.py  florentine-families.py  geometry-questions.py  house-bills.py  house-committees.py  karate-club.py  madison-restaurant-reviews.py  mathoverflow-answers.py  music-blues-reviews.py  postprocess-pagefind.mjs  pubmed-cocitation.py  (+14 more)
scripts/utils/: boxplot.py  simplicial_shape.py  write.py  yaml.py
src/: content.config.ts  env.d.ts  mdx-components.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: layout.tsx  page.mdx
src/app/dataset/: page.tsx
src/app/legal/: layout.tsx
src/components/: CitationCopyButton.astro  CitationCopyButton.tsx  CopyTextButton.astro  CopyTextButton.tsx  DatasetCardList.astro  DatasetIndex.astro  Footer.astro  Icon.astro  Navbar.astro  PageHeader.astro  Person.astro  ToolCard.astro  about-sidebar-nav.tsx  alert.tsx  badge.astro  badge.tsx  button.astro  button.tsx  card.tsx  dataset-card-list.tsx  dataset-table.tsx  download-button-group.astro  download-button-group.tsx  footer.tsx  image.astro  multirange.tsx  navbar.tsx  network-view-tabs.astro  network-view-tabs.tsx  page-header.tsx  person.tsx  sidebar-nav.tsx  simplicial-shape-table.astro  simplicial-shape-table.tsx  stat.astro  stat.tsx  statistics-block.astro  statistics-block.tsx  surface-styles.ts  surface.astro  (+7 more)
src/datasets/: MAG-10.mdx  MANTRA-2-manifolds.mdx  MANTRA-3-manifolds.mdx  NDC-classes.mdx  NDC-substances.mdx  algebra-questions.mdx  amazon-reviews.mdx  cat-edge-Cooking.mdx  cat-edge-MAG-10.mdx  cat-edge-algebra-questions.mdx  cat-edge-geometry-questions.mdx  cat-edge-madison-restaurant-reviews.mdx  cat-edge-music-blues-reviews.mdx  cat-edge-vegas-bars-reviews.mdx  citeseer-cocitation.mdx  coauth-DBLP.mdx  coauth-MAG-Geology.mdx  coauth-MAG-History.mdx  congress-bills.mdx  contact-high-school.mdx  contact-primary-school.mdx  cooking-brazilian.mdx  cooking-british.mdx  cooking-cajun-creole.mdx  cooking-chinese.mdx  cooking-filipino.mdx  cooking-french.mdx  cooking-greek.mdx  cooking-indian.mdx  cooking-irish.mdx  cooking-italian.mdx  cooking-jamaican.mdx  cooking-japanese.mdx  cooking-korean.mdx  cooking-mexican.mdx  cooking-moroccan.mdx  cooking-russian.mdx  cooking-southern-us.mdx  cooking-spanish.mdx  cooking-thai.mdx  (+52 more)
src/layouts/: AboutLayout.astro  BaseLayout.astro
src/pages/: index.astro  statistics.astro  tools.astro
src/styles/: globals.css
src/tools/: ahorn-loader.mdx  gudhi.mdx  hypergraphx.mdx  hypernetx.mdx  pytspl.mdx  toponetx.mdx  xgi.mdx
src/utils/: citation.ts  citation.tsx  datasets.ts  format.tsx  imbalance-degree.ts  satteri-github-alerts.mjs  tags.ts  tooltip.ts  zenodo.ts
tests/: test_boxplot_statistics.py
tools/: ahorn_to_hif.py  datasheet_linter.py
(+49 files in other folders)
