[project]
name = "AHORN"
version = "0.1.0"
description = "Comprehensive repository of research-quality simplicial complex, cell complex, and hypergraph datasets for higher-order network science."
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = "==3.13.7"
dependencies = [
    "pyyaml==6.0.2",
    "rich==14.1.0",
    "toponetx==0.2.0",
]

[tool.ruff.lint]
select = [
    "F", # pyflakes errors
    "E", # code style
    "W", # warnings
    "I", # import order
    "D", # pydocstyle rules
    "UP", # pyupgrade rules
    "YTT", # flake8-2020 rules
    "S", # bandit rules
    "BLE", # blind except
    "B", # bugbear rules
    "A", # builtin shadowing
    "COM", # comma rules
    "C4", # comprehensions
    "DTZ", # datetime rules
    "T10", # debugger calls
    "FA", # future annotations
    "ISC", # implicit str concatenation
    "ICN", # import conventions
    "LOG", # logging rules
    "G", # logging format rules
    "PIE", # pie rules
    "Q", # quote rules
    "RSE", # raise rules
    "RET", # return rules
    "SLOT", # slot rules
    "SIM", # code simplifications
    "TID", # tidy imports
    "TC", # type checking rules
    "PTH", # use pathlib
    "PD", # pandas rules
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "FLY", # flynt
    "NPY", # numpy rules
    "PERF", # performance rules
    "FURB", # refurb
    "RUF", # miscellaneous rules
]
ignore = [
    "E501",    # line too long
    "COM812",  # trailing commas; conflict with `ruff format`
    "ISC001",  # implicitly single-line str concat; conflict with `ruff format`
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.sources]
toponetx = { git = "https://github.com/pyt-team/TopoNetX", branch = "main" }
